# release-server-service

./: .gitignore  Dockerfile  README.md  convert_config.py  convert_config.sh  docker-compose.yml  example_full_config_request.json  pyproject.toml  sample_model_config.yaml  test_docker_tag_conversion.py
src/release_server_service/: __init__.py  config.py  main.py
src/release_server_service/api/: routes.py
src/release_server_service/core/: cbclient_deployer.py  health.py  replica_manager.py  replica_manager_v2.py  replica_worker.py  server_factory.py  state_manager.py  wheel_resolver.py
src/release_server_service/models/: requests.py  responses.py  server_modes.py
tests/: test_api.py  test_server_factory.py  test_wheel_resolver.py
